# serbot_rpi

serbot_ws/r2d2/: CMakeLists.txt  package.xml
serbot_ws/r2d2/launch/: display.launch
serbot_ws/robot_setup_tf/: package.xml
serbot_ws/robot_setup_tf/src/: tf_broadcaster.cpp
serbot_ws/serbot/: CMakeLists.txt  package.xml
serbot_ws/serbot_bringup/: CMakeLists.txt  package.xml
serbot_ws/serbot_bringup/launch/: rplidar.launch  serbot_core.launch  serbot_create_map.launch  serbot_raspicam_node.launch  serbot_remote.launch  serbot_robot.launch  serbot_simulation.launch  serbot_start.launch  serbot_teleop_client.launch  serbot_test.launch  serbot_tf.launch
serbot_ws/serbot_bringup/launch/includes/: description.launch.xml
serbot_ws/serbot_bringup/scripts/: create_udev_rules
serbot_ws/serbot_bringup/src/: imu_listener.py  play.py  play_reached_sound.py  play_sound.py  serbot_diagnostics.cpp  serbot_sound.py  serbot_teleop_client.py  serbot_teleop_control.py  tf_to_vel.py
serbot_ws/serbot_description/: CMakeLists.txt  package.xml
serbot_ws/serbot_description/urdf/: serbot.urdf
serbot_ws/serbot_example/: CMakeLists.txt  package.xml  setup.py
serbot_ws/serbot_example/launch/: interactive_markers.launch  serbot_bumper.launch  serbot_client.launch  serbot_cliff.launch  serbot_illumination.launch  serbot_obstacle.launch  serbot_pointop_key.launch  serbot_sonar.launch
serbot_ws/serbot_example/nodes/: serbot_bumper  serbot_client  serbot_cliff  serbot_illumination  serbot_marker_server  serbot_obstacle  serbot_pointop_key  serbot_server  serbot_sonar
serbot_ws/serbot_navigation/: CMakeLists.txt  package.xml
serbot_ws/serbot_navigation/launch/: move_base.launch  serbot_navigation.launch
serbot_ws/serbot_opencv/: CMakeLists.txt  package.xml
serbot_ws/serbot_opencv/launch/: serbot_fullbody.launch
serbot_ws/serbot_opencv/src/: serbot_fullbody_detect.py  serbot_fullbody_detect2.py  test.py
serbot_ws/serbot_setup_tf/: CMakeLists.txt  package.xml
serbot_ws/serbot_simulations/serbot_gazebo/: CMakeLists.txt  package.xml
serbot_ws/serbot_simulations/serbot_gazebo/include/serbot_gazebo/: serbot_drive.h
serbot_ws/serbot_simulations/serbot_gazebo/src/: serbot_drive.cpp
serbot_ws/serbot_slam/: CMakeLists.txt  package.xml
serbot_ws/serbot_slam/bag/: bag_files.md
serbot_ws/serbot_slam/launch/: serbot_cartographer.launch  serbot_frontier_exploration.launch  serbot_gmapping.launch  serbot_hector.launch  serbot_karto.launch  serbot_slam.launch
serbot_ws/serbot_slam/rviz/: serbot_gmapping.rviz
serbot_ws/serbot_slam/src/: flat_world_imu_node.cpp
serbot_ws/serbot_teleop/: CMakeLists.txt  package.xml  setup.py
serbot_ws/serbot_teleop/launch/: serbot_teleop_key.launch
serbot_ws/serbot_teleop/nodes/: serbot_teleop_key.py  serbot_teleop_key_adafruit.py
