<?xml version="1.0"?>
<package format="2">
  <name>serbot_navigation</name>
  <version>1.2.0</version>
  <description>
    The serbot_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <maintainer email="soohyun0907@naver.com">SooHyun</maintainer>
  <license>Apache 2.0</license>
  
  <url type="website">http://wiki.ros.org/turtlebot3_navigation</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>serbot_bringup</exec_depend>
</package>
