<?xml version="1.0"?>
<package format="2">
  <name>serbot_teleop</name>
  <version>1.2.0</version>
  <description>
    Provides teleoperation using keyboard for TurtleBot3.
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <maintainer email="soohyun0907@naver.com">SooHyun</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
